[package]
name = "loam"
version = "0.1.0"
description = "Tree Database Library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/loam"
repository = "https://github.com/DougLau/loam/loam"
readme = "README.md"
keywords = ["database", "search"]
edition = "2018"

[dependencies]
bincode = "1.3"
crc32fast = "1.2"
thiserror = "1"
memmap2 = "0.3"
serde = { version = "1.0", features = ["derive"] }
