[package]
name = "loam"
version = "0.3.0"
description = "File-based tree storage"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/loam"
repository = "https://github.com/DougLau/loam/loam"
readme = "README.md"
keywords = ["database", "search"]
edition = "2021"

[dependencies]
bincode = "1.3"
crc32fast = { version = "1.4", optional = true }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"

[features]
default = []
crc = ["crc32fast"]
