[package]
name = "loam"
description = "File-based tree storage"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/loam"
repository = "https://github.com/DougLau/loam/loam"
readme = "README.md"
keywords = ["database", "search"]
edition.workspace = true
version.workspace = true

[dependencies]
bincode = "1.3"
crc32fast = { version = "1.5", optional = true }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"

[features]
default = []
crc = ["crc32fast"]
